fix order for lat then export

--- a/config.json
+++ b/config.json
@@ -10,10 +10,10 @@
     "parse_colleges": false,
     "export_colleges": false,
     "export_colleges_file": "allcolleges.json",
-    "import_colleges" : true,
+    "import_colleges" : false,
     "import_colleges_file": "allcolleges.json",
 
-    "parse_college_pages": true,
+    "parse_college_pages": false,
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
@@ -33,24 +33,24 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific level or All, start with # to disable that line",
         "#NCAA DI",
-        "NCAA DII",
+        "#NCAA DII",
         "#NCAA DIII",
         "#NCAA DIII",
         "#NAIA",
         "#NJCAA",
-        "#All"
+        "All"
     ],
 
-    "parse_lat_long" : false,
+    "import_college_details": true,
+    "import_college_details_file": "college_details_16.json",
+
+    "parse_lat_long" : true,
     "lat_long_list" : [
         "# placeholder, not used, parse_lat_long is long time each so can be run after import"
     ],
 
     "export_college_details": true,
     "export_college_details_file": "college_details_16.json",
-
-    "import_college_details": false,
-    "import_college_details_file": "college_details_16.json",
 
     "export_college_details_text": true,
     "export_college_details_text_file": "college_details_16.text",
