--- a/config.json
+++ b/config.json
@@ -5,6 +5,57 @@
     "stateslist" : [
         "# filter for state/college list (limited web, completed):",
         "# list of specific states or All, start with # to disable that line",
+        "#Alabama",
+        "#Alaska",
+        "#Arizona",
+        "#Arkansas",
+        "#California",
+        "#Colorado",
+        "#Connecticut",
+        "#Delaware",
+        "#Florida",
+        "#Georgia",
+        "#Hawaii",
+        "#Idaho",
+        "#Illinois",
+        "#Indiana",
+        "#Iowa",
+        "#Kansas",
+        "#Kentucky",
+        "#Louisiana",
+        "#Maine",
+        "#Maryland",
+        "#Massachusetts",
+        "#Michigan",
+        "#Minnesota",
+        "#Mississippi",
+        "#Missouri",
+        "#Montana",
+        "#Nebraska",
+        "#Nevada",
+        "#New Hampshire",
+        "#New Jersey",
+        "#New Mexico",
+        "#New York",
+        "#North Carolina",
+        "#North Dakota",
+        "#Ohio",
+        "#Oklahoma",
+        "#Oregon",
+        "#Pennsylvania",
+        "#Rhode Island",
+        "#South Carolina",
+        "#South Dakota",
+        "#Tennessee",
+        "#Texas",
+        "#Utah",
+        "#Vermont",
+        "#Virginia",
+        "#Washington",
+        "#West Virginia",
+        "#Wisconsin",
+        "#Wyoming",
+        "#District of Columbia",
         "All"
     ],
     "parse_colleges": false,
@@ -17,7 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
-        "#Flagler College",
+        "# Flagler College",
         "Nova Southeastern University",
         "University of Montana",
         "Arizona State University",
@@ -26,8 +77,31 @@
         "Coastal Carolina University",
         "University of Tampa",
         "Northern Arizona University",
-        "#TBA",
-        "#All"
+        "Lynn University",
+        "Morgan State University",
+        "Florida Institute of Technology",
+        "Jacksonville University",
+        "stephen university",
+        "# edger",
+        "University at Buffalo",
+        "Grand Canyon University",
+        "Elon University",
+        "Davidson College",
+        "Campbell University",
+        "East Carolina University",
+        "# perspiration",
+        "Limestone University",
+        "Wake Forest University",
+        "Anderson University (SC)",
+        "Erskine College",
+        "Charleston Southern University",
+        "Coker University",
+        "Lander University",
+        "Augusta University",
+        "Pittsburg State University",
+        "Washburn University of Topeka",
+        "University at Albany",
+        "# All"
     ],
     "levellist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
