--- a/config_kip.json
+++ b/config_kip.json
@@ -1,5 +1,5 @@
 {
-    "open_chromedp" : true,
+    "open_chromedp" : false,
     "parse_map" : false,
     "parse_states": false,
     "stateslist" : [
@@ -61,10 +61,10 @@
     "parse_colleges": false,
     "export_colleges": false,
     "export_colleges_file": "allcolleges.json",
-    "import_colleges" : true,
+    "import_colleges" : false,
     "import_colleges_file": "allcolleges.json",
 
-    "parse_college_pages": true,
+    "parse_college_pages": false,
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
@@ -113,7 +113,7 @@
         "All"
     ],
 
-    "import_college_details": false,
+    "import_college_details": true,
     "import_college_details_file": "college_details_kip.json",
 
     "parse_lat_long" : false,
