added search based on miles radius (not travel time)

--- a/config_16_spokane.json
+++ b/config_16_spokane.json
@@ -51,12 +51,12 @@
         "#Utah",
         "#Vermont",
         "#Virginia",
-        "#Washington",
+        "Washington",
         "#West Virginia",
         "#Wisconsin",
         "#Wyoming",
         "#District of Columbia",
-        "All"
+        "#All"
     ],
     "parse_colleges": false,
     "export_colleges": false,
@@ -69,59 +69,59 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "# Flagler College",
-        "Nova Southeastern University",
-        "University of Montana",
-        "Arizona State University",
-        "University of Central Florida",
-        "University of North Texas",
-        "Coastal Carolina University",
-        "University of Tampa",
-        "Northern Arizona University",
-        "Lynn University",
-        "Morgan State University",
-        "Florida Institute of Technology",
-        "Jacksonville University",
-        "stephen university",
-        "# edger",
-        "University at Buffalo",
-        "Grand Canyon University",
-        "Elon University",
-        "Davidson College",
-        "Campbell University",
-        "East Carolina University",
-        "# perspiration",
-        "Limestone University",
-        "Wake Forest University",
-        "Anderson University (SC)",
-        "Erskine College",
-        "Charleston Southern University",
-        "Coker University",
-        "Lander University",
-        "Augusta University",
-        "Pittsburg State University",
-        "Washburn University of Topeka",
-        "University at Albany",
-        "Lehigh University",
-        "# All"
+        "#Nova Southeastern University",
+        "#University of Montana",
+        "#Arizona State University",
+        "#University of Central Florida",
+        "#University of North Texas",
+        "#Coastal Carolina University",
+        "#University of Tampa",
+        "#Northern Arizona University",
+        "#Lynn University",
+        "#Morgan State University",
+        "#Florida Institute of Technology",
+        "#Jacksonville University",
+        "#stephen university",
+        "## edger",
+        "#University at Buffalo",
+        "#Grand Canyon University",
+        "#Elon University",
+        "#Davidson College",
+        "#Campbell University",
+        "#East Carolina University",
+        "## perspiration",
+        "#Limestone University",
+        "#Wake Forest University",
+        "#Anderson University (SC)",
+        "#Erskine College",
+        "#Charleston Southern University",
+        "#Coker University",
+        "#Lander University",
+        "#Augusta University",
+        "#Pittsburg State University",
+        "#Washburn University of Topeka",
+        "#University at Albany",
+        "#Lehigh University",
+        "All"
     ],
     "levellist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific level or All, start with # to disable that line",
-        "#NCAA DI",
-        "#NCAA DII",
-        "#NCAA DIII",
+        "NCAA DI",
+        "NCAA DII",
+        "NCAA DIII",
         "#NCAA DIII",
         "#NAIA",
         "#NJCAA",
-        "All"
+        "#All"
     ],
-    "parse_location": false,
-    "parse_location_name": "",
-    "parse_location_latitude_logitude": "",
-    "parse_location_radius_miles": "",
+    "parse_location": true,
+    "parse_location_name": "Spokane",
+    "parse_location_latitude_logitude": "47.65878, -117.426046",
+    "parse_location_radius_miles": "300",
 
     "import_college_details": false,
-    "import_college_details_file": "college_details_16.json",
+    "import_college_details_file": "college_details_16_spokane.json",
 
     "parse_lat_long" : false,
     "lat_long_list" : [
@@ -129,13 +129,13 @@
     ],
 
     "export_college_details": true,
-    "export_college_details_file": "college_details_16.json",
+    "export_college_details_file": "college_details_16_spokane.json",
 
     "export_college_details_text": true,
-    "export_college_details_text_file": "college_details_16.text",
+    "export_college_details_text_file": "college_details_16_spokane.text",
 
     "export_college_details_html": true,
-    "export_college_details_html_file": "college_details_16.html",
+    "export_college_details_html_file": "college_details_16_spokane.html",
 
     "dump_states" : false,
     "dump_colleges" : false
