--- a/config_spokane.json
+++ b/config_spokane.json
@@ -68,52 +68,17 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
-        "# Flagler College",
-        "#Nova Southeastern University",
-        "#University of Montana",
-        "#Arizona State University",
-        "#University of Central Florida",
-        "#University of North Texas",
-        "#Coastal Carolina University",
-        "#University of Tampa",
-        "#Northern Arizona University",
-        "#Lynn University",
-        "#Morgan State University",
-        "#Florida Institute of Technology",
-        "#Jacksonville University",
-        "#stephen university",
-        "## edger",
-        "#University at Buffalo",
-        "#Grand Canyon University",
-        "#Elon University",
-        "#Davidson College",
-        "#Campbell University",
-        "#East Carolina University",
-        "## perspiration",
-        "#Limestone University",
-        "#Wake Forest University",
-        "#Anderson University (SC)",
-        "#Erskine College",
-        "#Charleston Southern University",
-        "#Coker University",
-        "#Lander University",
-        "#Augusta University",
-        "#Pittsburg State University",
-        "#Washburn University of Topeka",
-        "#University at Albany",
-        "#Lehigh University",
         "All"
     ],
     "levellist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific level or All, start with # to disable that line",
-        "NCAA DI",
-        "NCAA DII",
-        "NCAA DIII",
+        "#NCAA DI",
+        "#NCAA DII",
         "#NCAA DIII",
         "#NAIA",
         "#NJCAA",
-        "#All"
+        "All"
     ],
     "parse_location": true,
     "parse_location_name": "Spokane",
