--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -51,7 +51,7 @@
         "#Utah",
         "#Vermont",
         "#Virginia",
-        "Washington",
+        "#Washington",
         "#West Virginia",
         "#Wisconsin",
         "#Wyoming",
@@ -69,9 +69,13 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "Eastern Oregon University",
+        "Lewis \u0026 Clark College",
+        "Linfield University",
         "Montana State University, Bozeman",
         "Northwest University",
+        "Oregon State University",
         "University of Colorado, Boulder",
+        "University of Nevada",
         "TBD",
         "#All"
     ],
