--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -76,6 +76,7 @@
         "Oregon State University",
         "University of Colorado, Boulder",
         "University of Nevada",
+        "Washington State University",
         "TBD",
         "#All"
     ],
