--- a/config_16.json
+++ b/config_16.json
@@ -1,5 +1,5 @@
 {
-    "open_chromedp" : false,
+    "open_chromedp" : true,
     "parse_map" : false,
     "parse_states": false,
     "stateslist" : [
@@ -64,7 +64,7 @@
     "import_colleges" : true,
     "import_colleges_file": "colleges_all.json",
 
-    "parse_college_pages": false,
+    "parse_college_pages": true,
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
@@ -102,6 +102,7 @@
         "Washburn University of Topeka",
         "University at Albany",
         "Lehigh University",
+        "Metropolitan State University of Denver",
         "# All"
     ],
     "levellist" : [
@@ -119,7 +120,7 @@
     "parse_location_latitude_logitude": "",
     "parse_location_radius_miles": "",
 
-    "import_college_details": true,
+    "import_college_details": false,
     "import_college_details_file": "college_details_16.json",
 
     "parse_lat_long" : false,
