--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -74,6 +74,7 @@
         "Montana State University, Bozeman",
         "Northwest University",
         "Oregon State University",
+        "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Nevada",
         "Utah Tech University",
