--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -68,6 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "California State University, Fresno",
         "Colorado State University",
         "Eastern Oregon University",
         "Evergreen State College",
@@ -77,11 +78,13 @@
         "Montana State University, Bozeman",
         "Northwest University",
         "Oregon State University",
+        "San Francisco State University",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Nevada",
         "Utah Tech University",
         "Washington State University",
+        "Western Washington University",
         "#TBD",
         "#All"
     ],
