--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -69,6 +69,7 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "California State University, Fresno",
+        "Colby College",
         "Colorado State University",
         "Eastern Oregon University",
         "Evergreen State College",
@@ -82,9 +83,11 @@
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Nevada",
+        "University of Puget Sound",
         "Utah Tech University",
         "Washington State University",
         "Western Washington University",
+        "Yale University",
         "#TBD",
         "#All"
     ],
