--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -69,6 +69,7 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "California State University, Fresno",
+        "California State University - Long Beach",
         "Colby College",
         "Colorado State University",
         "Eastern Oregon University",
@@ -82,8 +83,10 @@
         "San Francisco State University",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
+        "University of Dayton",
         "University of Nevada",
         "University of Puget Sound",
+        "Utah State University",
         "Utah Tech University",
         "Washington State University",
         "Western Washington University",
