--- a/config_16_emails.json
+++ b/config_16_emails.json
@@ -66,34 +66,44 @@
 
     "parse_college_pages": true,
     "collegelist" : [
-        "# filter for college details from state/college list (more web, more time, specific):",
-        "# list of specific colleges or All, start with # to disable that line",
-        "California State University, Fresno",
-        "California State University - Long Beach",
-        "Colby College",
-        "Colorado State University",
-        "Corban University",
-        "Eastern Oregon University",
-        "Evergreen State College",
-        "George Fox University",
-        "Lewis \u0026 Clark College",
-        "Linfield University",
-        "Montana State University, Bozeman",
-        "Northwest University",
-        "Oregon State University",
-        "San Francisco State University",
-        "University of California, Los Angeles",
-        "University of Colorado, Boulder",
-        "University of Dayton",
-        "University of Nevada",
-        "University of Puget Sound",
-        "Utah State University",
-        "Utah Tech University",
+        "Grand Canyon University",
+        "Boise State University",
+        "University of South Florida",
+        "East Carolina University",
+        "Lynn University",
+        "Flagler College",
+        "Metropolitan State University of Denver",
+        "Arizona State University",
+        "University of Montana",
+        "University of Washington",
         "Washington State University",
-        "Western Washington University",
-        "Yale University",
-        "#TBD",
-        "#All"
+        "Montana State University, Bozeman",
+        "Utah State University",
+        "Northern Arizona University",
+        "California Polytechnic State University",
+        "California State Polytechnic University, Pomona",
+        "Washburn University of Topeka",
+        "# All"
+    ],
+    "collegecommentlist" : [
+        "(Grand Canyon University) * sent email",
+        "(Boise State University) * sent email",
+        "(University of South Florida) * sent email",
+        "(East Carolina University) * sent email",
+        "(Lynn University) * sent email",
+        "(Flagler College) * sent email",
+        "(Metropolitan State University of Denver) * sent email",
+        "(Arizona State University)",
+        "(University of Montana)",
+        "(University of Washington)",
+        "(Washington State University)",
+        "(Montana State University, Bozeman)",
+        "(Utah State University)",
+        "(Northern Arizona University)",
+        "(California Polytechnic State University)",
+        "(California State Polytechnic University, Pomona)",
+        "(Washburn University of Topeka)",
+        "# All"
     ],
     "levellist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
@@ -111,7 +121,7 @@
     "parse_location_radius_miles": "",
 
     "import_college_details": false,
-    "import_college_details_file": "college_details_spokaneCoaches.json",
+    "import_college_details_file": "college_details_16_emails.json",
 
     "parse_lat_long" : false,
     "lat_long_list" : [
@@ -119,13 +129,13 @@
     ],
 
     "export_college_details": true,
-    "export_college_details_file": "college_details_spokaneCoaches.json",
+    "export_college_details_file": "college_details_16_emails.json",
 
     "export_college_details_text": true,
-    "export_college_details_text_file": "college_details_spokaneCoaches.text",
+    "export_college_details_text_file": "college_details_16_emails.text",
 
     "export_college_details_html": true,
-    "export_college_details_html_file": "college_details_spokaneCoaches.html",
+    "export_college_details_html_file": "college_details_16_emails.html",
 
     "dump_states" : false,
     "dump_colleges" : false
