--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -72,7 +72,9 @@
         "Illinois College",
         "Louisiana State University",
         "Michigan State University",
+        "Southern Methodist University",
         "University of California, Los Angeles",
+        "Wake Forest University",
         "#TBD",
         "#All"
     ],
