--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -70,27 +70,41 @@
         "# list of specific colleges or All, start with # to disable that line",
         "California State University, Fresno",
         "California State University - Long Beach",
+        "California State University, Sacramento",
         "Colby College",
         "Colorado State University",
         "Corban University",
         "Eastern Oregon University",
+        "Eastern Washington University",
         "Evergreen State College",
         "George Fox University",
+        "Grand Canyon University",
+        "Hamline University",
         "Lewis \u0026 Clark College",
         "Linfield University",
         "Montana State University, Bozeman",
+        "North Idaho College",
         "Northwest University",
         "Oregon State University",
+        "Pacific University (OR)",
+        "Pepperdine University",
+        "St. Mary's College of California",
         "San Francisco State University",
+        "University of California, Davis",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Dayton",
+        "University of Iowa",
         "University of Nevada",
         "University of Puget Sound",
+        "University of San Francisco",
+        "University of the Pacific",
         "Utah State University",
         "Utah Tech University",
         "Washington State University",
+        "Washington University (MO)",
         "Western Washington University",
+        "Willamette University",
         "Yale University",
         "#TBD",
         "#All"
