--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -97,12 +97,15 @@
         "University of Iowa",
         "University of Nevada",
         "University of Puget Sound",
+        "University of San Diego",
         "University of San Francisco",
         "University of the Pacific",
+        "University of Wyoming",
         "Utah State University",
         "Utah Tech University",
         "Washington State University",
         "Washington University (MO)",
+        "Western Oregon University",
         "Western Washington University",
         "Willamette University",
         "Yale University",
