--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -68,6 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "Big Bend Community College",
         "California State University, Fresno",
         "California State University - Long Beach",
         "California State University, Sacramento",
@@ -82,19 +83,26 @@
         "Hamline University",
         "Lewis \u0026 Clark College",
         "Linfield University",
+        "Loyola University Chicago",
         "Montana State University, Bozeman",
         "North Idaho College",
         "Northwest University",
         "Oregon State University",
         "Pacific University (OR)",
         "Pepperdine University",
+        "Point Loma Nazarene University",
+        "Portland State University",
         "St. Mary's College of California",
         "San Francisco State University",
+        "Seattle Pacific University",
+        "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Dayton",
         "University of Iowa",
+        "University of La Verne",
+        "University of Miami (FL)",
         "University of Nevada",
         "University of Puget Sound",
         "University of San Diego",
@@ -107,6 +115,7 @@
         "Washington University (MO)",
         "Western Oregon University",
         "Western Washington University",
+        "Whitman College",
         "Willamette University",
         "Yale University",
         "#TBD",
