--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -68,6 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "United States Military Academy",
         "Big Bend Community College",
         "California State University, Fresno",
         "California State University - Long Beach",
@@ -79,6 +80,7 @@
         "Eastern Washington University",
         "Evergreen State College",
         "George Fox University",
+        "Gonzaga University",
         "Grand Canyon University",
         "Hamline University",
         "Lewis \u0026 Clark College",
@@ -86,6 +88,7 @@
         "Loyola University Chicago",
         "Montana State University, Bozeman",
         "North Idaho College",
+        "Northwest Nazarene University",
         "Northwest University",
         "Oregon State University",
         "Pacific University (OR)",
@@ -95,6 +98,7 @@
         "St. Mary's College of California",
         "San Francisco State University",
         "Seattle Pacific University",
+        "South Puget Sound Community College",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
@@ -111,6 +115,7 @@
         "University of Wyoming",
         "Utah State University",
         "Utah Tech University",
+        "Walla Walla Community College",
         "Washington State University",
         "Washington University (MO)",
         "Western Oregon University",
