--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -74,6 +74,7 @@
         "California State University - Long Beach",
         "California State University, Sacramento",
         "Colby College",
+        "College of Southern Idaho",
         "Colorado State University",
         "Corban University",
         "Eastern Oregon University",
@@ -85,8 +86,10 @@
         "Hamline University",
         "Lewis \u0026 Clark College",
         "Linfield University",
+        "Loyola Marymount University",
         "Loyola University Chicago",
         "Montana State University, Bozeman",
+        "North Carolina State University",
         "North Idaho College",
         "Northwest Nazarene University",
         "Northwest University",
@@ -98,7 +101,9 @@
         "St. Mary's College of California",
         "San Francisco State University",
         "Seattle Pacific University",
+        "Seattle University",
         "South Puget Sound Community College",
+        "University of Montana",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
@@ -107,12 +112,15 @@
         "University of Iowa",
         "University of La Verne",
         "University of Miami (FL)",
+        "University of Nevada, Las Vegas",
         "University of Nevada",
+        "University of Oklahoma",
         "University of Puget Sound",
         "University of San Diego",
         "University of San Francisco",
         "University of the Pacific",
         "University of Wyoming",
+        "United States Air Force Academy",
         "Utah State University",
         "Utah Tech University",
         "Walla Walla Community College",
@@ -123,7 +131,7 @@
         "Whitman College",
         "Willamette University",
         "Yale University",
-        "#TBD",
+         "#TBD",
         "#All"
     ],
     "levellist" : [
