--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -71,9 +71,11 @@
         "Fordham University",
         "Illinois College",
         "Louisiana State University",
+        "Loyola Marymount University",
         "Michigan State University",
         "Southern Methodist University",
         "University of California, Los Angeles",
+        "Virginia Commonwealth University",
         "Wake Forest University",
         "#TBD",
         "#All"
