--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -84,6 +84,7 @@
         "Gonzaga University",
         "Grand Canyon University",
         "Hamline University",
+        "Lamar University",
         "Lewis \u0026 Clark College",
         "Linfield University",
         "Loyola Marymount University",
@@ -98,12 +99,15 @@
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Portland State University",
+        "Purdue University",
+        "Rice University",
         "St. Mary's College of California",
         "San Francisco State University",
         "Seattle Pacific University",
         "Seattle University",
         "South Puget Sound Community College",
         "University of Montana",
+        "United States Air Force Academy",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
@@ -119,8 +123,8 @@
         "University of San Diego",
         "University of San Francisco",
         "University of the Pacific",
+        "University of Washington",
         "University of Wyoming",
-        "United States Air Force Academy",
         "Utah State University",
         "Utah Tech University",
         "Walla Walla Community College",
