--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -74,7 +74,10 @@
         "Loyola Marymount University",
         "Michigan State University",
         "Southern Methodist University",
+        "Texas Woman's University",
         "University of California, Los Angeles",
+        "University of Colorado, Boulder",
+        "University of Notre Dame",
         "Virginia Commonwealth University",
         "Wake Forest University",
         "#TBD",
