--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -70,6 +70,7 @@
         "# list of specific colleges or All, start with # to disable that line",
         "United States Military Academy",
         "Big Bend Community College",
+        "Boise State University",
         "California State University, Fresno",
         "California State University - Long Beach",
         "California State University, Sacramento",
@@ -77,6 +78,7 @@
         "College of Southern Idaho",
         "Colorado State University",
         "Corban University",
+        "DePaul University",
         "Eastern Oregon University",
         "Eastern Washington University",
         "Evergreen State College",
@@ -84,6 +86,7 @@
         "Gonzaga University",
         "Grand Canyon University",
         "Hamline University",
+        "Idaho State University",
         "Lamar University",
         "Lewis \u0026 Clark College",
         "Linfield University",
@@ -117,6 +120,7 @@
         "University of La Verne",
         "University of Miami (FL)",
         "University of Nevada, Las Vegas",
+        "University of Missouri, Columbia",
         "University of Nevada",
         "University of Oklahoma",
         "University of Puget Sound",
@@ -130,6 +134,7 @@
         "Walla Walla Community College",
         "Washington State University",
         "Washington University (MO)",
+        "Weber State University",
         "Western Oregon University",
         "Western Washington University",
         "Whitman College",
