--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -73,6 +73,7 @@
         "Boise State University",
         "California State University, Fresno",
         "California State University - Long Beach",
+        "California State University, Monterey Bay",
         "California State University, Sacramento",
         "Colby College",
         "College of Southern Idaho",
@@ -105,6 +106,7 @@
         "Purdue University",
         "Rice University",
         "St. Mary's College of California",
+        "San Diego State University",
         "San Francisco State University",
         "Seattle Pacific University",
         "Seattle University",
@@ -116,11 +118,12 @@
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Dayton",
+        "University of Idaho",
         "University of Iowa",
         "University of La Verne",
         "University of Miami (FL)",
-        "University of Nevada, Las Vegas",
         "University of Missouri, Columbia",
+        "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of Oklahoma",
         "University of Puget Sound",
@@ -129,8 +132,10 @@
         "University of the Pacific",
         "University of Washington",
         "University of Wyoming",
+        "University of Utah",
         "Utah State University",
         "Utah Tech University",
+        "Utah Valley University",
         "Walla Walla Community College",
         "Washington State University",
         "Washington University (MO)",
